# basinex

./: .gitignore  .readthedocs.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  extract.py  input.yml  pyproject.toml  setup.cfg  setup.py  submit.sh
.github/workflows/: main.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  contents.rst  examples.rst
docs/source/_templates/: layout.html
examples/: LUT.txt  README.md  input.yml  pre_monsum_1982_2016.nc
extractor/: extractor.pyx
lib/: gauges.py  geoarray.py  netcdf.py  wrapper.py
src/basinex/: __init__.py  extractor.pyx  gauges.py  main.py  netcdf.py  wrapper.py
src/basinex/geoarray/: __init__.py  core.py  gdalfuncs.py  gdalio.py  gdalspatial.py  geotrans.py  spatial.py  utils.py  wrapper.py
src/basinex/netcdf4/: __init__.py  netcdf4.py  utils.py
