[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.5",
    "oldest-supported-numpy",
    "Cython>=0.28.3,<3.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/basinex/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = [
    "py36",
    "py37",
    "py38",
]

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# Disable building PyPy wheels on all platforms, 32bit for py3.10 and musllinux builds
skip = "pp* *-win32 *-musllinux_*"
# Run the package tests with cli
test-command = "basinex -h"
# no wheels for linux-32bit anymore for numpy>=1.22
environment = "PIP_PREFER_BINARY=1"

# Install system library
[tool.cibuildwheel.linux]
before-all = [
    "yum install gdal-devel",
    "export CPLUS_INCLUDE_PATH=/usr/include/gdal",
    "export C_INCLUDE_PATH=/usr/include/gdal",
    "pip3 install GDAL==$(gdal-config --version)",
]
