[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]>=3.5",
    "oldest-supported-numpy",
    "Cython>=0.28.3,<3.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/basinex/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = [
    "py36",
    "py37",
    "py38",
]

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# Disable building PyPy wheels on all platforms, py310 on 32bit and musllinux builds
skip = "pp* cp310-win32 cp310-manylinux_i686 *-musllinux_*"
# prefer binaries
environment = "PIP_PREFER_BINARY=1"
