[metadata]
name = basinex
description = A basin extractor.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mhm-ufz/basinex
author = mHM Developers
author_email = mhm-developers@ufz.de
maintainer = Sebastian Müller
maintainer_email = sebastian.mueller@ufz.de
license = LGPL-3.0
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: Unix
    Operating System :: Microsoft
    Operating System :: MacOS
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Utilities
project_urls =
    Documentation = https://basinex.readthedocs.io
    Source = https://github.com/mhm-ufz/basinex
    Tracker = https://github.com/mhm-ufz/basinex/issues
    Changelog = https://github.com/mhm-ufz/basinex/blob/main/CHANGELOG.md

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.14.5
    pyyaml
    gdal
    netcdf4<1.6
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where=src
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    m2r2>=0.2.8
    sphinx>=4
    sphinx-rtd-theme>=1
test =
    pytest-cov>=3

[options.entry_points]
console_scripts =
    basinex = basinex.main:cli
